--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -35,7 +35,7 @@
         <section id="home">
             <div class="container">
                 <div class="home_image animate__animated animate__bounceInLeft">
-                    <img src="../Images/WhatsApp Image 2024-06-03 at 14.15.14_3c1ea404.jpg" alt="my image">
+                    <img src="WhatsApp Image 2024-06-03 at 14.15.14_3c1ea404.jpg" alt="my image">
                 </div>
                 <div class="home_content">
                     <h1><span class="hi_text">Hi</span>, I am
@@ -53,7 +53,7 @@
                 <div class="project_container">
                     <div class="grid_item">
                         <div class="card">
-                            <img src="../Images/image1.jpg" alt="Tribute Website">
+                            <img src="image1.jpg" alt="Tribute Website">
                             <div class="card_content">
                                 <h3>Tribute Website</h3>
                             </div>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="grid_item">
                         <div class="card">
-                            <img src="../Images/image2.avif" alt="Tribute Website">
+                            <img src="image2.avif" alt="Tribute Website">
                             <div class="card_content">
                                 <h3>Developer Landing Page</h3>
                             </div>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="grid_item">
                         <div class="card">
-                            <img src="../Images/image4.webp" alt="Tribute Website">
+                            <img src="image4.webp" alt="Tribute Website">
                             <div class="card_content">
                                 <h3>Restaurant Website</h3>
                             </div>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="grid_item">
                         <div class="card">
-                            <img src="../Images/image3.png" alt="Tribute Website">
+                            <img src="image3.png" alt="Tribute Website">
                             <div class="card_content">
                                 <h3>Web Music Player</h3>
                             </div>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="grid_item">
                         <div class="card">
-                            <img src="../Images/image51.webp" alt="Tribute Website">
+                            <img src="image51.webp" alt="Tribute Website">
                             <div class="card_content">
                                 <h3>Application Form </h3>
                             </div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="grid_item">
                         <div class="card">
-                            <img src="../Images/image6.avif" alt="Tribute Website">
+                            <img src="image6.avif" alt="Tribute Website">
                             <div class="card_content">
                                 <h3>Parallax Website</h3>
                             </div>
